tests/ui/issues/issue-26093.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/issue-26093.rs:3:16
   |
LL | / macro_rules! not_a_place {
LL | |     ($thing:expr) => {
LL | |         $thing = 42;
   | |                ^
LL | |
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `not_a_place!`
...
LL |       not_a_place!(99);
   |       ----------------
   |       |            |
   |       |            cannot assign to this expression
   |       in this macro invocation

error[E0067]: invalid left-hand side of assignment
  --> $DIR/issue-26093.rs:5:16
   |
LL | / macro_rules! not_a_place {
LL | |     ($thing:expr) => {
LL | |         $thing = 42;
LL | |
LL | |         $thing += 42;
   | |                ^^
LL | |
LL | |     }
LL | | }
   | |_- in this expansion of `not_a_place!`
...
LL |       not_a_place!(99);
   |       ----------------
   |       |            |
   |       |            cannot assign to this expression
   |       in this macro invocation

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0067, E0070.
For more information about an error, try `rustc --explain E0067`.
